@@ -1,3 +1,9 @@
+Thu Oct 16 10:41:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Bug_1361_Regression/client.cpp:
+        * tests/Bug_1361_Regression/Echo.cpp:
+          Use ACE_OS::raise to fix compile errors with WinCE
+
 Thu Oct 16 09:39:08 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>
 
         * orbsvcs/tests/Bug_1395_Regression/Makefile.am:
